# Leaders_Assignment_Agentic_AI

./: README.md
02_open_router/openrouter/: .env  README.md  pyproject.toml
02_open_router/openrouter/src/openrouter/: __init__.py  main.py
03_litellm_openai_agent/lite_LLm/: pyproject.toml
03_litellm_openai_agent/lite_LLm/src/lite_llm/: .env  __init__.py  lite.py
03_litellm_openai_agent/project_chatbot/: .gitignore  README.md  main.py  pyproject.toml
04_hello_agent/: pyproject.toml
04_hello_agent/src/hello_agent/: .env  __init__.py  main.py
05_chainlit/helloworld/: pyproject.toml
project_01/: pyproject.toml
project_01/explore-uv/: README.md  pyproject.toml
project_01/explore-uv/src/explore_uv/: __init__.py
uv_project_02/uv_project2/: README.md  pyproject.toml
uv_project_02/uv_project2/src/uv_project2/: main.py
