[project]
name = "openrouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.17",
]

[project.scripts]
openrouter = "openrouter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
